disclosure spacing fix

--- a/src/Component/upcoming/Upcoming.css
+++ b/src/Component/upcoming/Upcoming.css
@@ -1,6 +1,6 @@
 .upcoming-section{
     margin-top: 100px;
-    margin-bottom: 100px;
+    margin-bottom: 68px;
 }
 
 .upcoming-heading-row h3{
